# polysurf

./: CHANGELOG.md  README.md  builder.py  pyproject.toml  setup.py
src/: __init__.py  builder.py
src/polysurf/: __init__.py  builder.py  utils.py
src/polysurf.egg-info/: SOURCES.txt  requires.txt  top_level.txt
test/: combined.xyz  graphene_rectangular.xyz  metadata.json  pe_2monomers_linear.xyz  polymer_final.xyz  slab_final.xyz  test_run.py  ti3c2o2_rectangular.xyz
tests/: test_builder.py  test_run.py  ti3c2o2.xyz
