[project]
name = "polysurf"
version = "0.1.0"
description = "ASE-based builder to assemble slab + polymer systems for DFT workflows"
authors = [
  {name = "Gabriel Gouveia Barbosa"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "ase",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "isort",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["polysurf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
