[project]
name = "polysurf"
version = "0.1.0"
description = "ASE-based builder to assemble slab + polymer systems for DFT workflows"
authors = [
  {name = "Gabriel Gouveia Barbosa"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "ase",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
