[project]
name = "polysurf"
version = "0.1.0"
description = "ASE-based builder to assemble slab + polymer systems for DFT workflows"
authors = [
  {name = "Gabriel Gouveia Barbosa"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "ase",
]

[project.urls]
Homepage = "https://github.com/ggbarbosa/polysurf"
Documentation = "https://github.com/ggbarbosa/polysurf"
Repository = "https://github.com/ggbarbosa/polysurf"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
